--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clickity",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kridlet.github.io/clickity/",
+  "homepage": "https://kridlet.github.io/clickity",
   "dependencies": {
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
